<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_sky_blue"
    tools:context=".presentation.ui.SignUpOptionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_default">

            <TextView
                android:id="@+id/CreateAccount_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/poppins"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline3" />

            <TextView
                android:id="@+id/letsKnowYou_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins"
                android:text="@string/lets_know_you"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CreateAccount_textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:textColorHint="@color/hex_grey"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/letsKnowYou_textView">

                <EditText
                    android:id="@+id/firstName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/light_sky_blue"
                    android:textCursorDrawable="@drawable/cursor_style_bg" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/last_name"
                android:textColorHint="@color/hex_grey"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

                <EditText
                    android:id="@+id/lastName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/light_sky_blue"
                    android:textCursorDrawable="@drawable/cursor_style_bg" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/OtherName_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:textColorHint="@color/hex_grey"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintEnabled="false"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

                <EditText
                    android:id="@+id/OtherName_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/other_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@drawable/cursor_style_bg"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/email_address"
                android:textColorHint="@color/hex_grey"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OtherName_Layout">

                <EditText
                    android:id="@+id/emailAddress_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@drawable/cursor_style_bg" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:textColorHint="@color/hex_grey"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@drawable/cursor_style_bg"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/deep_sky_blue"
                app:boxStrokeColor="@color/hex_grey"
                app:errorEnabled="true"
                app:hintTextColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray">

                <EditText
                    android:id="@+id/confirm_password_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@drawable/cursor_style_bg"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.06" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_29dp"
                android:backgroundTint="@color/grey"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:paddingVertical="9dp"
                android:text="@string/sign_up"
                android:textColor="@color/deep_sky_blue"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/have_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_29dp"
                android:layout_marginBottom="@dimen/margin_29dp"
                android:fontFamily="@font/poppins"
                android:text="@string/have_an_account"
                android:textColor="@color/hex_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_submit_button" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8_dp"
                android:fontFamily="@font/poppins"
                android:text="@string/login"
                android:textColor="@color/hex_grey"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/have_account_text_view"
                app:layout_constraintStart_toEndOf="@id/have_account_text_view"
                app:layout_constraintTop_toTopOf="@id/have_account_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>