...
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:dropDownWidth="wrap_content"
                android:entries="@array/Account"
...
